# GFpipeline

./: .gitignore  README.md  config.yaml  pyproject.toml
.kiro/specs/gene-family-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
data/rep_index/: TEST.rep.pep.fa
gfpipeline/: __init__.py
gfpipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gfpipeline/cli/: __init__.py  cmd_genome_db.py  cmd_refine.py  cmd_run.py  cmd_stages.py  main.py
gfpipeline/config/: __init__.py  loader.py  schema.py
gfpipeline/core/: __init__.py  exceptions.py  file_manager.py  logger.py  runner.py  sequence.py  tool_checker.py
gfpipeline/genome_db/: __init__.py  blast_db.py  gene_index.py  gff_qc.py  rep_index.py
gfpipeline/report/: __init__.py  summary.py
gfpipeline/stages/: __init__.py  collinearity.py  domain.py  domain_filter.py  identify.py  motif.py  properties.py  refine.py  trans.py  tree.py
tests/: test_blast_db.py  test_collinearity.py  test_config.py  test_core.py  test_domain.py  test_domain_filter.py  test_file_manager.py  test_gene_index.py  test_gff_qc.py  test_identify.py  test_motif.py  test_properties.py  test_rep_index.py  test_sequence.py  test_summary.py  test_tool_checker.py  test_trans.py  test_tree.py
